--- a/Tareas/Views/Usuarios/Registro.cshtml
+++ b/Tareas/Views/Usuarios/Registro.cshtml
@@ -25,6 +25,10 @@
 
 			<button class="btn-primary btn">Regístrate</button>
 			<a class="btn btn-success" asp-action="login">Deseo Logearme</a>
+			<a class="btn btn-success" asp-action="LoginExterno" asp-route-proveedor="Microsoft">
+				Continuar con Microsoft
+			</a>
+
 		</form>
 	</div>
 
